Project1VS/force-app/main/default/objects/Subscription_Plan__c/Subscription_Plan__c.object-meta.xml
<CustomObject>
    <label>Subscription Plan</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Subscription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>