Project1VS/force-app/main/default/objects/Subscription_Plan__c/fields/Cancelled_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled Subscription</label>
    <type>Checkbox</type>
</CustomField>