Project1VS/force-app/main/default/objects/Subscription_Plan__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscription Plans</relationshipLabel>
    <relationshipName>Subscription_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>