Project1VS/force-app/main/default/objects/Subscription_Plan__c/validationRules/User_and_Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_and_Product_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISBLANK( User__c ), ISBLANK( Product__c) )</errorConditionFormula>
    <errorMessage>Neither the user nor the product may be left blank.</errorMessage>
</ValidationRule>